--- a/page1.html
+++ b/page1.html
@@ -22,11 +22,11 @@
         <div class="content">
             <div class="header">
                 <h1>
-                    The crazy combination
+                    crazy 
                 </h1>
             </div>
             <div class="article">
-                Kurt Zadek Lewin (September 9, 1890 – February 12, 1947) was a German-American psychologist, known as one of the modern pioneers of social, organizational, and applied psychology in the United States.[2] Kurt Lewin, exiled from the land of his birth, made a new life for himself. In this new life, Lewin defined himself and his contributions within three lenses of analysis; applied research, action research, and group communication were his major offerings to the field of communication.
+                hahgagjghajghgalh
 
             </div>
             
