--- a/product.html
+++ b/product.html
@@ -17,11 +17,10 @@
             </div>
              <div class="menu">
             <ul>
-                  <li><a href="home.html">HOME</a></li>
+                 <li><a href="index.html">HOME</a></li>
                 <li><a href="work.html">WORK</a></li>
                   <li><a href="blog.html">BLOG</a></li>
                 <li><a href="contact.html">CONTACT</a></li>
-                
             </ul>
             
         </div>
